--- a/slides/sections/introduction/main_results.tex
+++ b/slides/sections/introduction/main_results.tex
@@ -73,5 +73,18 @@ There is an algorithm for $|\Sigma| = 2$ with running time $\bigO{n + \delta M /
 
 
 \begin{frame}
+\frametitle{Main Results}
+\framesubtitle{Summary}
+\Large
+
+\begin{itemize}
+	\item Conditional lower bounds for every parameter setting (using specified parameters)
+	\pause
+	\item Conditional lower bounds match best known algorithms
+	\pause
+	\item Weaker lower bound for $|\Sigma| = 2$
+	\pause
+	\item Shown algorithm that matches weaker lower bound
+\end{itemize}
 
 \end{frame}
