--- a/slides/sections/introduction/methodology.tex
+++ b/slides/sections/introduction/methodology.tex
@@ -3,6 +3,7 @@
 	\framesubtitle{Methodology}
 
 	\begin{itemize}
+		\large
 		\item<1-> Paper provides framework to tackle \textbf{multivariate fine-grained complexity analysis} in \textbf{general}
 		\item<2-> Checklist for general approach for problem $\mathbb{B}$:
 	\end{itemize}
