--- a/slides/sections/reduction/large_lcs.tex
+++ b/slides/sections/reduction/large_lcs.tex
@@ -1,2 +1,4 @@
+\subsection{Large LCS}
+
 \input{sections/reduction/large_lcs/1vs12vs1_gadget}
 \input{sections/reduction/large_lcs/full_construction}
