--- a/slides/sections/reduction/large_lcs/full_construction.tex
+++ b/slides/sections/reduction/large_lcs/full_construction.tex
@@ -2,17 +2,79 @@
 \frametitle{Reduction - Large LCS}
 \framesubtitle{Construction}
 
-\begin{theorem}
-Let  $a_1, \dots, a_A, b_1, \dots, b_B \subseteq \{0,1\}^D$ be given with $A \mid B$. 
 
-Construct strings 
-\begin{align*}
-	x_i &= 1^\ell0^{\ell + 1}\nvg{a_i}&		y_j &= 0^{\ell +1}\nvg{b_j}			&&(\text{Recall: }\nvg{a_i} \text{ is the \emphBeamer{normalized vector gadget})}
-\end{align*}
+\begin{exampleblock}{Construction Large LCS}
+Let  $a_1, \dots, a_A, b_1, \dots, b_B \subseteq \{0,1\}^D$ be given with $A \mid B$. 
+Construct strings $x_i = \nvg{a_i}$ and $y_j = \nvg{b_j}$
 
 %, and integers $\rho_0, \rho_1$ as in Lemma 9.5 and define
 
 Set \emphTheorem{$P := 2B + 3A$} and \emphTheorem{$Q := B + 2A$} and define:
+\vspace{-2ex}
+
+\begin{align*}
+\tilde{x} &:= (\tilde{x}_1, \ldots, \tilde{x}_P) = \overbrace{(x_1, \ldots, x_A, x_1, \ldots, x_A, \ldots, x_1, \ldots, x_A)}^{2 \cdot (B/A) + 3 \text{ groups of size } A} 	&	x &:= \bigcirc_i G(\tilde{x}_i)\\
+%
+\tilde{y} &:= (\tilde{y}_1, \ldots, \tilde{y}_Q) = \underbrace{(y_1, \ldots, y_1}_{A \text{ copies of } y_1}, y_1, \ldots, y_B, \underbrace{y_1, \ldots, y_B}_{A \text{ copies of } y_1})	&	y &:= \bigcirc_j G(\tilde{y}_j)
+\end{align*}
+\end{exampleblock}
+
+%\begin{theorem}
+%
+%
+%The strings $x$ and $y$ satisfies the following properties:
+%
+%\begin{itemize}
+%    \item[(i)] For every $i \in [A], j \in [B]$, there is a $(1,2)$-alignment $\Lambda \in \Lambda^{1,2}_{P,Q}$ such that some $\ell \in [Q]$ is uniquely aligned to some $k \in [P]$ with $\tilde{x}_k = x_i$ and $\tilde{y}_\ell = y_j$.
+%
+%    \item $L(x,y) \geq \rho_0 \Leftrightarrow i \in [A], j \in [B]: \langle a_i, b_j \rangle = 0$.
+%
+%    \item We have $|y| \leq |x| \leq \mathcal{O}(B \cdot D)$ and $\delta(x, y) = \mathcal{O}(A \cdot D)$.
+%\end{itemize}
+%
+%\end{theorem}
+
+\begin{theorem}
+	Let $\mathbf{\alpha}$ be a parameter setting with \emphTheorem{$\alpha_\Sigma = 0$} and \emphTheorem{$\alpha_L = \alpha_m$}. 
+	There is $\gamma \geq 1$ such that $\lcsy{\mathbf{\alpha}}$ takes time $\min\{d, \delta m, \delta \Delta\}^{1 - o(1)}$, unless OVH fails.
+\end{theorem}
+
+\visible<2->{
+\begin{proof}
+\textbf{Given:} parameter setting $\mathbf{\alpha}$ and $n \geq 1$. 
+\vspace{-1ex}
+\begin{columns}
+	\column[t]{0.01\textwidth}
+	\column[t]{0.99\textwidth}
+	\begin{itemize}
+		\item<2-> use construction with \emphTheorem{$A := \left\lfloor \frac{1}{D} \min\left\{ \delta, \frac{d}{\min\{m, \Delta\}} \right\} \right\rfloor$} and \emphTheorem{$B := \left\lfloor \frac{1}{D} \min\{m, \Delta\} \right\rfloor$}
+		\item<3-> UOVH implies lower bound for running time: $(AB)^{1 - o(1)} = \min\{d, \delta m, \delta \Delta\}^{1 - o(1)}$.
+		\item<5-> To show: Unique alignment of $x_i$ and $y_j$ $\Rightarrow L(x,y) \geq \rho \Leftrightarrow \exists a_i, b_j:\; \langle a_i,b_j \rangle = 0$
+	\end{itemize}		
+	
+\end{columns}
+\end{proof}
+}
+
+\end{frame}
+
+
+
+
+
+\begin{frame}
+\frametitle{Reduction - Large LCS}
+\framesubtitle{Show Span of Parameter Space}
+
+
+\begin{exampleblock}{Construction Large LCS}
+Let  $a_1, \dots, a_A, b_1, \dots, b_B \subseteq \{0,1\}^D$ be given with $A \mid B$. 
+Construct strings $x_i = \nvg{a_i}$ and $y_j = \nvg{b_j}$
+
+%, and integers $\rho_0, \rho_1$ as in Lemma 9.5 and define
+
+Set \emphTheorem{$P := 2B + 3A$} and \emphTheorem{$Q := B + 2A$} and define:
+\vspace{-2ex}
 
 \begin{align*}
 \tilde{x} &:= (\tilde{x}_1, \ldots, \tilde{x}_P) = \overbrace{(x_1, \ldots, x_A, x_1, \ldots, x_A, \ldots, x_1, \ldots, x_A)}^{2 \cdot (B/A) + 3 \text{ groups of size } A} 	&	x &:= \bigcirc_i G(\tilde{x}_i)\\
@@ -20,16 +82,54 @@ Set \emphTheorem{$P := 2B + 3A$} and \emphTheorem{$Q := B + 2A$} and define:
 \tilde{y} &:= (\tilde{y}_1, \ldots, \tilde{y}_Q) = \underbrace{(y_1, \ldots, y_1}_{A \text{ copies of } y_1}, y_1, \ldots, y_B, \underbrace{y_1, \ldots, y_B}_{A \text{ copies of } y_1})	&	y &:= \bigcirc_j G(\tilde{y}_j)
 \end{align*}
 
-The strings $x$ and $y$ satisfies the following properties:
+Set \emphTheorem{$A := \left\lfloor \frac{1}{D} \min\left\{ \delta, \frac{d}{\min\{m, \Delta\}} \right\} \right\rfloor$} and \emphTheorem{$B := \left\lfloor \frac{1}{D} \min\{m, \Delta\} \right\rfloor$}
+\end{exampleblock}
 
-\begin{itemize}
-    \item[(i)] For every $i \in [A], j \in [B]$, there is a $(1,2)$-alignment $\Lambda \in \Lambda^{1,2}_{P,Q}$ such that some $\ell \in [Q]$ is uniquely aligned to some $k \in [P]$ with $\tilde{x}_k = x_i$ and $\tilde{y}_\ell = y_j$.
 
-    \item[(ii)] We have $L(x,y) \geq Q(\gamma_1 + \gamma_2 + 3\gamma_3) + (A - 1)\rho_1 + \rho_0 + (Q - A)\ell_Y$ if and only if there are $i \in [A], j \in [B]$ with $\langle a_i, b_j \rangle = 0$.
+\begin{columns}
+\column[t]{0.49\textwidth}
+\setlength{\parskip}{1em}
+\textbf{Parameters $\delta$:}\\
+$\delta(x,y) \leq \bigO{AD} \visible<3->{\leq \bigO{\delta}}$
 
-    \item[(iii)] We have $|y| \leq |x| \leq \mathcal{O}(B \cdot D)$ and $\delta(x, y) = \mathcal{O}(A \cdot D)$.
-\end{itemize}
+\visible<4->{
+\textbf{Parameters $L, m, n$:}\\
+$L(x, y) \leq m(x, y) \leq n(x, y) = |x| \leq \bigO{BD} = \bigO{\min\{m, \Delta\}}$\\
+$m \leq n$ and $\alpha_L = \alpha_m$
+}
 
-\end{theorem}
+\visible<5->{
+\textbf{Parameter $\Sigma$:}\\
+$|\Sigma(x,y)| = 2 \leq \bigO{n^{\alpha_\Sigma}}$
+}
+
+
+
+% =================================================================
+
+\column[t]{0.49\textwidth}
+\setlength{\parskip}{1em}
+\visible<6->{
+\textbf{Parameter $\Delta$:}\\
+$\Delta(x,y) \leq n(x,y) \leq \bigO{\min\{m, \Delta\}}$
+}
+
+%\vspace{1ex}
+
+\visible<7->{
+\textbf{Parameter $M$:}\\
+$M(x,y) \leq n(x,y)^2 = \bigO{(AD)^2} = \bigO{L^2}$\\
+\visible<5->{From parameter relations:\quad $M \geq L^2/|\Sigma|$}\\
+\visible<6->{Since $\alpha_\Sigma = 0$:\quad $L^2 \leq \bigO{M}$}
+}
+
+%\vspace{1ex}
+
+
+\visible<10->{
+\textbf{Parameter $d$:}\\
+not here\\
+}
+\end{columns}
 
 \end{frame}
