--- a/slides/sections/reduction/small_lcs/full_reduction.tex
+++ b/slides/sections/reduction/small_lcs/full_reduction.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-	\frametitle{Reduction}
+	\frametitle{Reduction - Small LCS}
 	\framesubtitle{OR Gadget}
 	
 \begin{exampleblock}{OR Gadget}
@@ -67,7 +67,7 @@ For an OV instance $\mathcal{A} = \{a_1, \ldots, a_A\}$, $\mathcal{B} = \{b_1, \
 
 
 \begin{frame}
-	\frametitle{Reduction}
+	\frametitle{Reduction - Small LCS}
 	\framesubtitle{Correctness}
 	
 \begin{exampleblock}{OR Gadget}
