--- a/slides/sections/reduction/small_lcs/normalized_vector_gadget.tex
+++ b/slides/sections/reduction/small_lcs/normalized_vector_gadget.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-	\frametitle{Reduction}
+	\frametitle{Reduction - Small LCS}
 	\framesubtitle{Normalized Vector Gadget}
 	
 	\begin{columns}[onlytextwidth]
@@ -21,9 +21,10 @@
 		d\rho_0 + \rho_1 & otherwise
 	\end{cases}
 	\]
+	
+	and $|\nvg{a_i}| \in \bigO{D}$
 	\end{theorem}
 	}
-	
 	\end{columns}
 
 	
