--- a/slides/sections/reduction/small_lcs/show_parameters.tex
+++ b/slides/sections/reduction/small_lcs/show_parameters.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-\frametitle{Reduction}
+\frametitle{Reduction - Small LCS}
 \framesubtitle{Show Span of Parameter Space}
 
 \begin{alertblock}{Todo}
@@ -29,8 +29,17 @@
 \end{frame}
 
 
+
+
+
+
+
+
+
+
+
 \begin{frame}[t]
-\frametitle{Reduction}
+\frametitle{Reduction - Small LCS}
 \framesubtitle{Show Span of Parameter Space}
 
 \begin{exampleblock}{Final Construction}
