--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -18,10 +18,10 @@
 \title[Multivariate Fine-Grained Complexity of LCS]{Multivariate Fine-Grained Complexity of Longest Common Subsequence}
 \subtitle{By: Karl Bingmann \& Marvin Künnemann}
 \institute[]{}
-\logo{\includegraphics[height=13mm]{beamericonarticle}}%e.g. insitute logo or project logo
+%\logo{\includegraphics[height=13mm]{beamericonarticle}}%e.g. insitute logo or project logo
                                           %(the beamericonarticle graphic comes from the beamer package
                                           % and must in case of need b replaced by your individual logo)
-\titlegraphic{\includegraphics[height=\paperheight,trim=0 0 0 -9]{beamericononline}}%
+\titlegraphic{\includegraphics[height=\paperheight,trim=0 0 0 -9]{images/title-image-large.png}}%
 %\date[\today]{} %--- activate to suppress date on title page
 
 
@@ -61,461 +61,7 @@
 
 \include{sections/reduction/large_lcs}
 
+\include{sections/conclusion}
 
-
-
-
-
-
-%Here is an example for a full-page image:
-{\setbeamertemplate{background}
- {\includegraphics[width=\paperwidth,height=\paperheight,trim=3.7 3.6 2.8 2.9]{beamericononline}}% 
- \frame[empty]{}}
-
-\section{Design elements}
-\subsection{Colors and Pictograms}
-
-\def\1#1{%
-  \textcolor{KIT#1}{\rule{0.09\hsize}{4mm}}\lower0.5\baselineskip\llap{\hbox to0.09\hsize{\hss\tiny KIT#1\hss}}
-  %\lower1\baselineskip\llap{\hbox to0.09\hsize{\hss\fontsize{3}{1}\selectfont \extractcolorspec{KIT#1}\temp\temp\hss}}%
-  \ignorespaces}%
-\begin{frame}[t,fragile]{Colors}
-  \leavevmode{\Large Theme colors\par}\smallskip
-  \1{white}\1{darkblue}\1{iceblue}\1{icegray}\1{green}\1{pinegreen}\1{cyan}\1{blue}\1{lightgreen}\1{forestgreen}\break
-  \1{white!95!black}\1{darkblue!10}\1{iceblue!20} \1{icegray!90!black}\1{green!20} \1{pinegreen!10}\1{cyan!20} \1{blue!20} \1{lightgreen!20} \1{forestgreen!20}\break
-  \1{white!85!black}\1{darkblue!25}\1{iceblue!40} \1{icegray!75!black}\1{green!40} \1{pinegreen!25}\1{cyan!40} \1{blue!40} \1{lightgreen!40} \1{forestgreen!40}\break
-  \1{white!75!black}\1{darkblue!50}\1{iceblue!60} \1{icegray!50!black}\1{green!60} \1{pinegreen!50}\1{cyan!60} \1{blue!60} \1{lightgreen!60} \1{forestgreen!60}\break
-  \1{white!65!black}\1{darkblue!75}\1{iceblue!75!black}\1{icegray!25!black}\1{green!75!black}\1{pinegreen!75}\1{cyan!75!black}\1{blue!75!black}\1{lightgreen!75!black}\1{forestgreen!75!black}\break
-  \1{white!50!black}\1{darkblue!90}\1{iceblue!50!black}\1{icegray!10!black}\1{green!50!black}\1{pinegreen!90}\1{cyan!50!black}\1{blue!50!black}\1{lightgreen!50!black}\1{forestgreen!50!black}%
-  \par\bigskip
-  {\Large Custom colors\par}\smallskip
-  \1{black}\1{purple}\1{orange}\1{yellow}\1{red}\1{brown}\hfill~\footnotesize Do not use standard colors like \verb|\color{green}|.\par
-\end{frame}
-
-\begin{frame}{Design Elements}
-  \begin{columns}
-    \column{0.48\hsize}\parskip\medskipamount
-    \KITarrowE\quad
-    \KITarrowS\quad
-    \KITarrowW\quad
-    \KITarrowN\qquad
-    \KITarrowN[KITlightgreen]\par
-    \KITarrowSE\quad
-    \KITarrowSW\quad
-    \KITarrowNW\quad
-    \KITarrowNE\qquad
-    \KITarrowNE(KITlightgreen)\par
-    \KITcross\quad
-    \KITplus\quad
-    \KITminus\quad
-    \KITequal\qquad
-    \KITequal[KITred](KITpinegreen)\par
-    \KITcheck\quad
-    \KITsymbol{1}\quad
-    \KITsymbol{$\int$}\quad
-    \KITsymbol{€}\qquad
-    \KITsymbol[KITwhite]{€}\par
-    \KITbook\quad
-    \KITbulb\quad
-    \KIThandshake\qquad
-    \KIThandshake[KITyellow]\qquad
-    \KIThandshake[KITgreen](KITwhite)\par
-    \KITmeet\quad
-    \KITmolecule\quad
-    \KITteacher\qquad
-    \KITteacher[KITyellow](KITblack)\qquad
-    \KITteacher[KITdarkblue](KITwhite)
-    \column{0.48\hsize}\parskip\medskipamount
-    \textcolor{KITdarkblue}{\rule{0.5\hsize}{0.4bp}}\par
-    \textcolor{KITgreen}{\rule[1ex]{0.5\hsize}{0.4bp}}\par
-    \textcolor{KITiceblue}{\rule[1ex]{0.5\hsize}{0.4bp}}\par
-    \textcolor{KITicegray}{\rule[1ex]{0.5\hsize}{0.4bp}}\par
-    \textcolor{KITdarkblue}{\KITdashedrule{0.5\hsize}}\par
-    \textcolor{KITgreen}{\KITdashedrule[1ex]{0.5\hsize}}\par
-    \textcolor{KITiceblue}{\KITdashedrule[1ex]{0.5\hsize}}\par
-    \textcolor{KITicegray}{\KITdashedrule[1ex]{0.5\hsize}}\par
-    \KITlongarrow{0.5\hsize}\par
-    \KITlongarrow[1ex]{0.5\hsize}\par
-  \end{columns}
-\end{frame}
-
-\subsection{Blocks and Special Elements}
-
-\begin{frame}{Beamer's standard blocks}
-  \begin{block}{Block}
-    Beamer's standard block in KIT-like design.
-  \end{block}
-
-  \begin{alertblock}{Alert block}
-    Beamer's standard alert block in KIT-like design.
-  \end{alertblock}
-
-  \begin{exampleblock}{Example block}
-    Beamer's standard example block in KIT-like design.
-  \end{exampleblock}
-\end{frame}
-
-\begin{frame}{More Blocks in KIT Colors}
-  \begin{columns}
-    \column{.5\textwidth}
-    \begin{darkblueblock}
-      Darkblue block\strut
-    \end{darkblueblock}
-    \begin{darkbluebox}
-      Darkblue box\strut
-    \end{darkbluebox}
-    \begin{greenblock}
-      Green block\strut
-    \end{greenblock}
-    \begin{greenbox}
-      Green box\strut
-    \end{greenbox}
-    \begin{iceblueblock}
-      Iceblue block\strut
-    \end{iceblueblock}
-    \begin{icebluebox}
-      Iceblue box\strut
-    \end{icebluebox}
-    \begin{icegrayblock}
-      Icegray block\strut
-    \end{icegrayblock}
-    \column{.24\textwidth}
-    \begin{pinegreenblock}
-      Pinegreen block\strut
-    \end{pinegreenblock}
-    \begin{cyanblock}
-      Cyan block\strut
-    \end{cyanblock}
-    \begin{blueblock}
-      Blue block\strut
-    \end{blueblock}
-    \begin{lightgreenblock}
-      Lightgreen block\strut
-    \end{lightgreenblock}
-    \begin{forestgreenblock}
-      Forestgreen block\strut
-    \end{forestgreenblock}
-    \column{.24\textwidth}
-    \begin{blackblock}
-      Black block\strut
-    \end{blackblock}
-    \begin{blackbox}
-      Black box\strut
-    \end{blackbox}
-    \begin{purpleblock}
-      Purple block\strut
-    \end{purpleblock}
-    \begin{orangeblock}
-      Orange block\strut
-    \end{orangeblock}
-    \begin{yellowblock}
-      Yellow block\strut
-    \end{yellowblock}
-    \begin{redblock}
-      Red block\strut
-    \end{redblock}
-    \begin{redbox}
-      Red box\strut
-    \end{redbox}
-    \begin{brownblock}
-      Brown block\strut
-    \end{brownblock}
-  \end{columns}
-\end{frame}
-
-\begin{frame}{Beamer's Theorem-like Environments}
-  \begin{definition}%[title add]
-    Beamer's definition environment in KIT-like design.
-  \end{definition}
-
-  \begin{theorem}%[title add]
-    Beamer's theorem environment in KIT-like design.
-  \end{theorem}
-
-  \begin{example}[title add]
-    Beamer's example environment in KIT-like design.
-  \end{example}
-
-  \begin{proof}%[special title]
-    Beamer's proof environment in KIT-like design.
-  \end{proof}
-\end{frame}
-
-\begin{frame}[fragile]%<- Option "fragile" for frames with verbatim material
-  \frametitle{An Algorithm For Finding Prime Numbers}
-\begin{verbatim}
-int main (void)
-{
-std::vector<bool> is_prime (100, true);
-for (int i = 2; i < 100; i++)
-if (is_prime[i])
-{
-std::cout << i << " ";
-for (int j = i; j < 100; is_prime [j] = false, j+=i);
-}
-return 0;
-}
-\end{verbatim}
-\end{frame}
-
-\begin{frame}{Slide Title}
-  \begin{KITtabular}{lll}
-    Column title & Column title & Column title \\\midrule
-    I am a dummy copy & I am a dummy copy & I am a dummy copy \\
-    I am a dummy copy & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular}
-  
-  \begin{KITtabular*}{\hsize}{lell}
-    Column title & Column title & Column title \\\midrule
-    I am a dummy copy & I am a dummy copy & I am a dummy copy \\
-    I am a dummy copy & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular*}
-
-  \begin{KITtabularx}{\hsize}{llX}
-    Column title & Column title & Column title \\\midrule
-    I am a dummy copy &  I am a dummy copy & I am a dummy copy \\
-    I am a dummy copy I am a dummy copy I am a dummy copy & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabularx}
-\end{frame}
-
-\begin{frame}{Slide Title}
-  \begin{KITtabular}{>{\color{KITgreen}\large\bfseries}lIll}
-    Line title & I am a dummy copy & I am a dummy copy \\
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular}\qquad\hfill
-  \begin{KITtabular}{>{\color{KITgreen}\large\bfseries}lIll}
-    Column title & Column title & Column title \\\midrule
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular}
-  
-  \begin{KITtabular*}{0.4\hsize}{>{\color{KITgreen}\large\bfseries}lIll}
-    Line title & I am a dummy copy & I am a dummy copy \\
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular*}\qquad\hfill
-  \begin{KITtabular*}{0.4\hsize}{>{\color{KITgreen}\large\bfseries}lIll}
-    Column title & Column title & Column title \\\midrule
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabular*}
-
-  \begin{KITtabularx}{0.4\hsize}{>{\color{KITgreen}\large\bfseries}lIll}
-    Line title & I am a dummy copy & I am a dummy copy \\
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabularx}\qquad\hfill
-  \begin{KITtabularx}{0.4\hsize}{>{\color{KITgreen}\large\bfseries}lIll}
-    Column title & Column title & Column title \\\midrule
-    Line title & I am a dummy copy & I am a dummy copy \\
-  \end{KITtabularx}
-\end{frame}
-
-\begin{frame}{Slide Title}
-  \begin{KITtabular}{rrrrrr}
-    Column title      & Column title      & Column title      & Column title      & Column title      & Column title      \\\midrule
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\\KITsumrule
-    10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ & 10\,000,00\,€ \\
-  \end{KITtabular}
-\end{frame}
-
-\def\KITpanel#1{{%
-  \fboxsep3mm
-  \colorbox{KITgreen}{%
-    \advance\hsize-2\fboxsep
-    \hbox to\hsize{\vbox{\color{KITwhite}%
-        \textcolor{KITgreen!20}{\footnotesize Step #1\hfill\rotatebox{135}{\vrule width0.4bp height2.5mm\vrule width2.5mm height0.4bp}}%
-        \par\bigskip
-        \large\textbf{I am a dummy copy. And I’ve been a dummy copy since my birth.}\par\smallskip
-        It took me a long time to realize what it means to be a dummy copy: you make no sense. You stand out now and then by being completely out of context.\par
-        \vspace*{3\baselineskip}}}}}}
-\begin{frame}{Slide Title}
-  \begin{columns}[onlytextwidth]
-    \column{.31\textwidth}
-    \KITpanel{1}%
-    \column{.31\textwidth}
-    \KITpanel{2}%
-    \column{.31\textwidth}
-    \KITpanel{3}%
-  \end{columns}
-\end{frame}
-
-\def\KITpanel#1{{%
-  \fboxsep3mm
-  \colorbox{KITgreen}{%
-    \advance\hsize-2\fboxsep
-    \hbox to\hsize{\vbox{\color{KITwhite}%
-        \textcolor{KITgreen!20}{\footnotesize Step #1\hfill\rotatebox{135}{\vrule width0.4bp height2.5mm\vrule width2.5mm height0.4bp}}%
-        \par\bigskip
-        \large\textbf{I am a dummy copy.}\par\smallskip
-        It took me a long time to realize what it means to be a dummy copy: you make no sense. You stand out now and then by being completely out of context.\par
-        \vspace*{3\baselineskip}}}}}}
-\begin{frame}{Slide Title}
-  \begin{columns}[onlytextwidth]
-    \column{.23\textwidth}
-    \KITpanel{1}%
-    \column{.23\textwidth}
-    \KITpanel{2}%
-    \column{.23\textwidth}
-    \KITpanel{3}%
-    \column{.23\textwidth}
-    \KITpanel{4}%
-  \end{columns}
-\end{frame}
-
-\def\KITpanel#1{{%
-  \fboxsep3mm
-  \colorbox{KITgreen}{%
-    \advance\hsize-2\fboxsep
-    \hbox to\hsize{\vbox{\color{KITwhite}%
-        \textcolor{KITgreen!20}{\footnotesize Step #1\hfill\rotatebox{135}{\vrule width0.4bp height2.5mm\vrule width2.5mm height0.4bp}}%
-        \par\bigskip
-        \large\textbf{I am a dummy copy.}\break
-        It took me a long time to realize what it means to be a dummy copy.\par
-        }}}}\par\bigskip}
-\begin{frame}{Slide Title}
-  \begin{columns}[onlytextwidth]
-    \column{.31\textwidth}
-    \KITpanel{1}%
-    \column{.31\textwidth}
-    \KITpanel{2}%
-    \column{.31\textwidth}
-    \KITpanel{3}%
-  \end{columns}
-  \begin{columns}[onlytextwidth]
-    \column{.31\textwidth}
-    \KITpanel{4}%
-    \column{.31\textwidth}
-    \KITpanel{5}%
-    \column{.31\textwidth}
-    \KITpanel{6}%
-  \end{columns}
-\end{frame}
-
-\def\KITpanel#1{{%
-  \fboxsep3mm
-  \colorbox{KITgreen}{%
-    \advance\hsize-2\fboxsep
-    \hbox to\hsize{\vbox{\color{KITwhite}%
-        \textcolor{KITgreen!20}{\footnotesize Step #1\hfill\rotatebox{135}{\vrule width0.4bp height2.5mm\vrule width2.5mm height0.4bp}}%
-        \par\bigskip
-        \large\bfseries I am a dummy copy.\break
-        And I've been a dummy copy since my~birth.\par
-        }}}}\par\bigskip}
-\begin{frame}{Slide Title}
-  \begin{columns}[onlytextwidth]
-    \column{.23\textwidth}
-    \KITpanel{1}%
-    \column{.23\textwidth}
-    \KITpanel{2}%
-    \column{.23\textwidth}
-    \KITpanel{3}%
-    \column{.23\textwidth}
-    \KITpanel{4}%
-  \end{columns}
-  \begin{columns}[onlytextwidth]
-    \column{.23\textwidth}
-    \KITpanel{5}%
-    \column{.23\textwidth}
-    \KITpanel{6}%
-    \column{.23\textwidth}
-    \KITpanel{7}%
-    \column{.23\textwidth}
-    \KITpanel{8}%
-  \end{columns}
-\end{frame}
-
-\def\KITpanel#1{{%
-  \fboxsep3mm
-  \colorbox{KITgreen}{%
-    \advance\hsize-2\fboxsep
-    \hbox to\hsize{\vbox{\centering\color{KITwhite}%
-        \csname KIT#1\endcsname[KITgreen!20](KITgreen)\par
-        \fontsize{31}{31}\selectfont 33\,\%\par\bigskip
-        {\color{KITgreen!20}\hrule}\bigskip
-        \large I am a dummy copy.\break
-        And I've been a dummy copy since my birth.\par
-        \vspace*{3\baselineskip}}}}}}
-\begin{frame}{Slide Title}
-  \begin{columns}[onlytextwidth]
-    \column{.23\textwidth}
-    \KITpanel{meet}%
-    \column{.23\textwidth}
-    \KITpanel{handshake}%
-    \column{.23\textwidth}
-    \KITpanel{molecule}%
-    \column{.23\textwidth}
-    \KITpanel{bulb}%
-  \end{columns}
-\end{frame}
-
-\def\KITpanel[#1]#2#3{%
-  \large
-  \csname KIT#2\endcsname[KITgreen!20](#1)\par
-  \parbox[t][2\baselineskip][t]{\hsize}{\raggedright\textbf{#3}}\par\bigskip
-  {\color{#1}\hrule}\bigskip
-  \textbf{I am a dummy copy.}\par\smallskip
-  It took me a long time to realize what it means to be a dummy copy.\par}
-\begin{frame}{Slide Title}
-  \leavevmode\rlap{\KITlongarrow{\hsize}}\par\vskip-2\baselineskip
-  \begin{columns}[onlytextwidth]
-    \column{.15\textwidth}
-    \KITpanel[KITgreen]{meet}{January\break 2025}%
-    \column{.15\textwidth}
-    \KITpanel[KITpinegreen]{bulb}{February\break 2025}%
-    \column{.15\textwidth}
-    \KITpanel[KITdarkblue]{handshake}{March – May 2025}%
-    \column{.15\textwidth}
-    \KITpanel[KITgreen]{molecule}{June –\break July 2025}%
-    \column{.15\textwidth}
-    \KITpanel[KITpinegreen]{book}{August –\break October 2025}%
-    \column{.15\textwidth}
-    \KITpanel[KITdarkblue]{teacher}{November – December 2025}%
-  \end{columns}
-\end{frame}
-
-{\setbeamertemplate{navigation symbols}{}
-\begin{frame}[b,whiteKITlogo]{Contact}
-  \vfill
-  {\Large\bfseries\color{KITgreen} Name\par}
-  {\footnotesize Position, title or function\par}
-  \bigskip
-  {\large +49 000 1234567\\
-    info@kit.edu\par}
-  \bigskip
-  {\bfseries\footnotesize Karlsruher Institut für Technologie\par}
-  {\footnotesize Kaiserstraße 12\\
-    76131 Karlsruhe\\
-    Germany\par}
-  ~\hfill\smash{\lower7mm\hbox{\includegraphics[height=\paperheight,trim=5.48 4.24 3.00 6.26,clip]{beamericonarticle}}}\kern-4.72mm %0.9 1.8 1.9 1
-  % replace dummy image with photo!
-\end{frame}}
-
-\def\KITteamember#1{%change this definition to insert photos of your team members!
-  \fbox{\hbox to\dimexpr\hsize-2\fboxsep{\hss\scalebox{2.12}{\csname KIT#1\endcsname[KITdarkblue](KITgreen!20)}\vrule width0pt height12\baselineskip depth5\baselineskip\hss}}\par\medskip
-  {\Large\bfseries\color{KITgreen}Name\par}\smallskip
-  \footnotesize Position, title or function}
-\begin{frame}{Team}
-  \begin{columns}[onlytextwidth]
-    \column{.23\textwidth}
-    \KITteamember{bulb}%
-    \column{.23\textwidth}
-    \KITteamember{teacher}%
-    \column{.23\textwidth}
-    \KITteamember{book}%
-    \column{.23\textwidth}
-    \KITteamember{meet}%
-  \end{columns}
-\end{frame}
-
-\begin{frame}[empty]%please customize the final slide for your needs
-  \vfill
-  \centerline{\KITlogo}\par
-  \vfill
-\end{frame}
 
 \end{document}
