--- a/slides/util/commands.tex
+++ b/slides/util/commands.tex
@@ -15,7 +15,7 @@
 \newcommand{\cgOneX}{\mathbf{1_x}}
 \newcommand{\cgZeroY}{\mathbf{0_y}}
 \newcommand{\cgOneY}{\mathbf{1_y}}
-\newcommand{\cg}[2]{\text{CG}(#1,#2)}
+\newcommand{\cg}[2]{\text{\textsc{Cg}}(#1,#2)}
 
 
 % Vector Gadges
