--- a/slides/sections/introduction/parameter_definition.tex
+++ b/slides/sections/introduction/parameter_definition.tex
@@ -9,16 +9,114 @@
 }
 
 \begin{frame}
+\frametitle{Parameter Definitions}
+
+\begin{columns}
+\column[t]{0.49\textwidth}
+\begin{align*}
+\visible<1->{n(x,y)      &:= |x|, \quad m(x,y) := |y|} \\
+\visible<2->{L(x,y)      &:= \text{Length of LCS}} \\
+\visible<3->{\delta(x,y) &:= \text{Deletions in smaller string}} \\
+\visible<4->{\Delta(x,y) &:= \text{Deletions in larger string}} \\
+\visible<5->{\Sigma(x,y) &:= \text{Size of alphabet}} \\
+\visible<6->{M(x,y)      &:= \text{Matching pairs } := \#\{(i,j) \mid x[i] = y[j]\}}	\\
+\visible<7->{d(x,y)	 	 &:= \text{ Dominant pairs, i.e., matching pairs that increase LCS}} \\
+\visible<8->{			 &:= \#\{(i,j) \mid L[i,j] > L[i-1,j] \text{ and } L[i,j] > L[i,j-1]\}}
+\end{align*}
+
+
+\column[t]{0.49\textwidth}
+\begin{columns}
+	\column[t]{0.49\textwidth}
+	\begin{figure}
+	\centering
+	\color{black}
+	\visible<1->{
+	\begin{tikzpicture}
+		\tikzstyle{base} = []
+		\tikzstyle{text element} = [base]
+		\tikzstyle{cell} = [base, minimum width=1.5em, inner sep=1pt, anchor=west, draw, minimum height=14pt]  
+		\tikzstyle{hide} = [draw=KITwhite!75!black, text=KITwhite!75!black]
+		\tikzstyle{marked} = [fill=KITgreen, draw=KITgreen]
+		
+		
+		\node[text element] (eqX) at (0,0) {$=$};
+		\node[text element, anchor=east] (x) at (eqX.west) {$x$};
+		
+		\node[cell] (x1) at ($(eqX.east) + (1.5em,0)$) {a};
+		\alt<2-4>{
+			\node[cell, marked] (x2) at (x1.east) {b};
+		}{
+			\node[cell] (x2) at (x1.east) {b};
+		}	
+		\node[cell] (x3) at (x2.east) {b};
+		\alt<2-4>{
+			\node[cell, marked] (x4) at (x3.east) {c};
+			\node[cell, marked] (x5) at (x4.east) {a};
+		}{
+			\node[cell] (x4) at (x3.east) {c};
+			\node[cell] (x5) at (x4.east) {a};
+		}
+		\node[cell] (x6) at (x5.east) {a};
+		
+		
+		\node[text element] (eqY) at (0,-1) {$=$};
+		\node[text element, anchor=east] (y) at (eqY.west) {$y$};
+		
+		\alt<2-4>{
+			\node[cell, marked] (y1) at ($(eqY.east) + (1.5em,0)$) {b};
+		}{
+			\node[cell] (y1) at ($(eqY.east) + (1.5em,0)$) {b};
+		}
+		\alt<2-4>{
+			\node[cell, marked] (y3) at (y1.east) {c};
+		}{
+			\node[cell] (y3) at (y1.east) {c};
+		}
+		\node[cell] (y4) at (y3.east) {b};
+		\alt<2-4>{
+			\node[cell, marked] (y5) at (y4.east) {a};
+		}{
+			\node[cell] (y5) at (y4.east) {a};
+		}
+		
+		
+		\only<2>{
+			\path[draw] (x2) edge (y1);	
+			\path[draw] (x4) edge (y3);	
+			\path[draw] (x5) edge (y5);	
+		}
+	
+	\end{tikzpicture}
+	}
+	\end{figure}
+
+	\column[t]{0.49\textwidth}
+	\begin{itemize}
+		\item<1-> $n = 5$
+		\item<1-> $m = 4$
+		\item<2-> $L = 3$
+		\item<3-> $\delta = m - L = 1$
+		\item<4-> $\Delta = n - L = 2$
+		\item<5-> $\Sigma = 3$
+	\end{itemize}
+
+\end{columns}
+
+\vspace{2ex}
 \begin{figure}
 \centering
-\visible<1-2>{
+\visible<6-8>{
 \begin{tikzpicture}[x=1.5em, y=1.5em]
 	\tikzstyle{cell} = [minimum height=1.5em, minimum width=1.5em]
 	\tikzstyle{dominant pair} = [fill=KITorange]
 	\tikzstyle{matching pair} = [fill=KITcyan]
-	\only<1>{
+	\only<6>{
 		\tikzstyle{dominant pair} = [fill=none]
 		\tikzstyle{matching pair} = [fill=none]
+	}
+	\only<7>{
+		\tikzstyle{dominant pair} = [matching pair]
 	}
 	
 	\entry{}{1,0}{a}
@@ -44,6 +142,7 @@
 	\entry{}{2,-2}{1}
 	\entry{}{3,-2}{1}
 	\dominant{}{4,-2}{2}
+	\dominant{}{4,-2}{2}
 	\entry{}{5,-2}{2}
 	\entry{}{6,-2}{2}
 	
@@ -66,14 +165,17 @@
 	\path[draw] (0.5,0.5) -- (0.5,-4.5);
 	
 	
-	\only<2->{
-	\node[dominant pair, circle] (legend_dom) at (8.5,-2) {};
-	\node[anchor=west] at (legend_dom.east) {dominant pair};
-	
+	\visible<7->{
 	\node[matching pair, circle] (legend_match) at (8.5,-3) {};
 	\node[anchor=west] at (legend_match.east) {matching pair};
+	}
+	\visible<8->{
+	\node[dominant pair, circle] (legend_dom) at (8.5,-2) {};
+	\node[anchor=west] at (legend_dom.east) {dominant pair};
 	}
 \end{tikzpicture}
 }
 \end{figure}
+
+\end{columns}
 \end{frame}
