--- a/slides/sections/parameter_relations/proof_dominant_pairs.tex
+++ b/slides/sections/parameter_relations/proof_dominant_pairs.tex
@@ -5,6 +5,8 @@
 	\begin{theorem}
 	For every LCS instance it holds that $d \leq 2L(\Delta + 1)$
 	\end{theorem}
+
+	\pause	
 	
 	\begin{proof}%
 	\color{black}%
@@ -15,20 +17,21 @@
 	Fix LCS $z$ of $x$ and $y$
 	\begin{itemize}
 		\color{black}
-		\item Per definition $z$ obtainable by:
+		\item<2-> Per definition $z$ obtainable by:
 		\begin{itemize}
 			\color{black}
-			\item Deleting at most $\Delta$ positions from $x$ or
-			\item Deleting at most $\delta$ positions from $y$
+			\item<2-> Deleting at most $\Delta$ positions from $x$ or
+			\item<2-> Deleting at most $\delta$ positions from $y$
 		\end{itemize}
-		\item $x[1..i]$ contains $z[1..i-\Delta]$
-		\item $y[1..j]$ contains $z[1..i-\delta]$
+		\item<3-> $x[1..i]$ contains $z[1..i-\Delta]$
+		\item<3-> $y[1..j]$ contains $z[1..i-\delta]$
 	\end{itemize}
 	
 	\vspace{2ex}
-	$\Rightarrow \min\{i-\Delta, j-\delta\} \leq L[i,j] \leq \min\{i,j\}$
+	\visible<4->{$\Rightarrow \min\{i-\Delta, j-\delta\} \leq L[i,j] \leq \min\{i,j\}$}
 	
 	\column[t]{0.49\textwidth}
+	\visible<5->{
 	Let $1 \leq k \leq L$
 	
 	\begin{itemize}
@@ -36,19 +39,25 @@
 		\item If $L[i,j] = k$:
 		\begin{itemize}
 			\color{black}
-			\item $k \leq i \leq k + \Delta$ or
-			\item $k \leq j \leq k + \delta$
+			\item<6-> $k \leq i \leq k + \Delta$ or
+			\item<7-> $k \leq j \leq k + \delta$
 		\end{itemize}
-		\item For each $i' \in \{k, \ldots, k + \Delta\}$ and $j' \in \{k, \ldots, k + \delta\}$:
+		\item<8-> For each $i' \in \{k, \ldots, k + \Delta\}$ and $j' \in \{k, \ldots, k + \delta\}$:
 		\begin{itemize}
 			\color{black}
-			\item At most one $k$-dominant pair $(i',j)$ or $(i,j')$
+			\item<9-> At most one $k$-dominant pair $(i',j)$ or $(i,j')$
 		\end{itemize}
 	\end{itemize}
 	
+	\visible<10->{
 	$\Rightarrow |D_k| \leq \Delta + \delta + 2 \leq 2(\Delta + 1)$
+	}
 	
+	\visible<11->{
 	$\Rightarrow d \leq 2L(\Delta + 1)$
+	}
+	
+	}
 	
 	\end{columns}
 	\end{proof}
